--- a/lightclientservice/app/src/main/res/values/strings.xml
+++ b/lightclientservice/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">light client service</string>
+    <string name="start_service">Start Service</string>
 </resources>
